--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/parser": "^7.24.5",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
