--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-js-pagination": "^3.0.3",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.9",
